# tinyEngine

./: CMakeLists.txt
Dependencies/freetype/builds/unix/: config.status  libtool  unix-def.mk
Dependencies/freetype/lib/: libfreetype.so.6.17.0
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/glew/: Makefile  cmake_install.cmake
Resource/Shader/: box.frag  box.vert  nanosuit.vert
src/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderData.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  glad.c  main.cpp
